# monitor-server-pg

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: monitor.py  postgresql.py  ui.py
